fix spacing for empty diaries

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -315,7 +315,7 @@ body {
  * Home page
  */
 .diary-empty {
-    margin: 25px 0 0 0;
+    margin: 17px 0 0 0 !important;
     padding: 0;
     text-align: center;
 }
